aws/terraform_ec2/main.tf
// TLS private key creation

resource "tls_private_key" "ec2_private_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}
// Key Pair create
resource "aws_key_pair" "ec2_key" {
  key_name   = "ec2keyfile"
  public_key = tls_private_key.ec2_private_key.public_key_openssh
}

//Locally storing the key pair
resource "local_file" "ec2_key_file" {
  content  = tls_private_key.ec2_private_key.private_key_pem
  filename = "ec2keyfile.pem"
}

//Create EC2 Instance
resource "aws_instance" "myec2vm" {
  count = 2
  ami = data.aws_ami.amzlinux2.id 
  instance_type = var.instance_type
  subnet_id = var.subnet_id
  vpc_security_group_ids = [aws_security_group.vpc-ssh.id, aws_security_group.vpc-web.id]  
  key_name = aws_key_pair.ec2_key.id
  tags = {
    "Name" = "EC2 Demo 2"
  }
  provisioner "remote-exec" {
    inline = [
      "sudo yum update -y",  # Update package index
      "sudo yum install java-1.8.0-openjdk-devel -y",  # Install Java 8
      "sudo wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat-stable/jenkins.repo",  # Add Jenkins repo
      "sudo rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key",  # Import Jenkins key
      "sudo yum install jenkins -y",  # Install Jenkins
      "sudo systemctl start jenkins",  # Start Jenkins service
      "sudo systemctl enable jenkins"  # Enable Jenkins service to start on boot
    ]
}
